<resources>
    <string name="google_app_id">AIzaSyC8QEWGVFWfyfm2rwTaIq5qq1ZevUvffW8</string>
    <string name="app_name">FindMovies</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Current Location</string>
    <string name="action_share">Share</string>
    <string name="action_bar_title">ANDROID KATA</string>
    <string name="action_bar_subtitle">Practice android daily</string>
    <string name="action_bar_search_title">Search</string>
    <string name="edit_search_hint">Please type your movies here.</string>
    <string name="item_release_date">Release date: </string>
    <string name="notification_title">Kata Notification</string>
    <string name="progress_dialog_title">Loading…</string>
    <string name="progress_dialog_cancel">Cancel</string>
    <string name="settings_title">Image Setting</string>
    <string name="settings_image">Image Size</string>
    <string name="large_settings">Large</string>
    <string name="small_settings">Small</string>
    <string name="settings_ok">OK</string>
    <string name="settings_cancel">Cancel</string>
    <string name="btn_save_image">save</string>
</resources>
